   <https://github.com/jhy/jsoup/issues/87>

 * Added jsoup.Connect configuration options to allow HTTP errors to be ignored, and the content-type to be ignored.
   Contributed by Jesse Piascik (piascikj)
   <https://github.com/jhy/jsoup/pull/78>

 * Added Node.before(node) and Node.after(node), to allow existing nodes to be moved, or new nodes to be inserted, into
   precise DOM positions.

 * Now handles unclosed <title> tags in document by breaking out of the title at the next start tag, instead of
   eating up to the end of the document.
   <https://github.com/jhy/jsoup/issues/82>

 * Added OSGi bundle support to the jsoup package jar.
   <https://github.com/jhy/jsoup/issues/98>

*** Release 1.5.2 [2011-02-27]
 * Fixed issue with selector parser where some boolean AND + OR combined queries (e.g. "meta[http-equiv], meta[content]")
   were being parsed incorrectly as OR only queries (e.g. former as "meta, [http-equiv], meta[content]")

 * Fixed issue where a content-type specified in a meta tag may not be reliably detected, due to the above issue.

 * Updated Element.text() and Element.ownText() methods to ensure <br> tags output as whitespace.

 * Tweaked Element.outerHtml() method to not generate initial newline on first output element.

 *** Release 1.5.1 [2011-02-19]

 * Integrated new single-pass selector evaluators, contributed by knz (Anton Kazennikov). This significantly speeds up
   the execution of combined selector queries.

 * Implemented workaround to fix Scala support. Contributed by bbeck (Brandon Beck).

 * Added ability to change an element's tag with Element.tagName(String), and to change many at once
   with Elements.tagName(String).

 * Added Node.wrap(html), Node.before(html), and Node.after(html), to allow HTML to be easily added to all nodes. These
   functions were previously supported on Elements only.

 * Added TextNode.splitText(index), which allows a text node to be split into two nodes at a specified index point.